[tool.poetry]
name = "flink-sql-gateway-api"
version = "1.18.alpha20250418"
description = "A client library for accessing Flink SQL Gateway REST API"
authors = ["Shijing Lu <shijing.lu@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/resink-ai/flink-sql-gateway-client"
keywords = ["Flink SQL Gateway", "Python", "Asyc Client"]
packages = [{ include = "flink_gateway_api" }]
include = ["CHANGELOG.md", "flink_gateway_api/py.typed"]


[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.20.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
